--- a/src/froala-angular/src/index.html
+++ b/src/froala-angular/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://cdn1.stage.codox.io/lib/css/wave.client.css" rel="stylesheet">
+  <script src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=froala" type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
