--- a/src/vue-froala/public/index.html
+++ b/src/vue-froala/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <link href="https://cdn1.stage.codox.io/lib/css/wave.client.css" rel="stylesheet">
+    <script src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=froala" type="text/javascript"></script>
   </head>
   <body>
     <noscript>
