Refactor index.html file

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,7 @@
     <ul>
         <li>
             <span>Angular Froala</span>
-            <button onclick="startAngularFroalaDemo()">Demo</button>
-            <a href="https://github.com/davidnus/samples/tree/master/src/froala-angular">Github</a>
+            <!--<a href="https://github.com/davidnus/samples/tree/master/src/froala-angular">Github</a>-->
         </li>
     </ul>
 
