feat: fixed codemirror editor config

--- a/react-codemirror-codox/public/index.html
+++ b/react-codemirror-codox/public/index.html
@@ -13,6 +13,7 @@
     <script src="http://localhost:3010/dist_dev/api/wave.client.js"
       type="text/javascript">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/codemirror.min.js" integrity="sha512-hc0zo04EIwTzKLvp2eycDTeIUuvoGYYmFIjYx7DmfgQeZPC5N27sPG2wEQPq8d8fCTwuguLrI1ffatqxyTbHJw==" crossorigin="anonymous"></script>
     <link href="https://cdn1.codox.io/lib/css/wave.client.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
