--- a/react-froala-codox/public/index.html
+++ b/react-froala-codox/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <script src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=froala"
+  <script src="http://localhost:3010/dist_dev/api/wave.client.js"
     type="text/javascript"></script>
   <link href="https://cdn1.codox.io/lib/css/wave.client.css" rel="stylesheet">
 
