updated wave plugin urls to directly to cdn1

--- a/react-quill-codox/public/index.html
+++ b/react-quill-codox/public/index.html
@@ -9,9 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <script
-    src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=quilljs"
-    type="text/javascript"></script>
-  <link href="https://cdn1.codox.io/lib/css/wave.client.css" rel="stylesheet">
+    src="https://cdn1.codox.io/lib/2.x/api/wave.client.js"></script>
+  <link href="https://cdn1.codox.io/lib/2.x/css/wave.client.css" rel="stylesheet">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
