--- a/vue-froala-codox/public/index.html
+++ b/vue-froala-codox/public/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link href="https://cdn1.stage.codox.io/lib/css/wave.client.css" rel="stylesheet">
-    <script src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=froala" type="text/javascript"></script>
+    <link href="https://cdn1.codox.io/lib/2.x/css/wave.client.css" rel="stylesheet">
+    <script src="https://cdn1.codox.io/lib/2.x/api/wave.client.js" type="text/javascript"></script>
   </head>
   <body>
     <noscript>
