--- a/react-codemirror-codox/public/index.html
+++ b/react-codemirror-codox/public/index.html
@@ -10,11 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/codemirror.min.css" integrity="sha512-xIf9AdJauwKIVtrVRZ0i4nHP61Ogx9fSRAkCLecmE2dL/U8ioWpDvFCAy4dcfecN72HHB9+7FfQj3aiO68aaaw==" crossorigin="anonymous" />
-    <script src="http://localhost:3010/dist_dev/api/wave.client.js"
+    <script src="https://cdn1.codox.io/lib/2.x/api/wave.client.js"
       type="text/javascript">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.60.0/codemirror.min.js" integrity="sha512-hc0zo04EIwTzKLvp2eycDTeIUuvoGYYmFIjYx7DmfgQeZPC5N27sPG2wEQPq8d8fCTwuguLrI1ffatqxyTbHJw==" crossorigin="anonymous"></script>
-    <link href="https://cdn1.codox.io/lib/css/wave.client.css" rel="stylesheet">
+    <link href="https://cdn1.codox.io/lib/2.x/css/wave.client.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
