--- a/react-textarea-codox/public/index.html
+++ b/react-textarea-codox/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="http://localhost:3010/dist_dev/api/wave.client.js"
+    <script src="https://cdn1.codox.io/lib/2.x/api/wave.client.js"
       type="text/javascript">
     </script>
-    <link href="https://cdn1.codox.io/lib/css/wave.client.css" rel="stylesheet">
+    <link href="https://cdn1.codox.io/lib/2.x/css/wave.client.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
