--- a/tinymce-angular-codox/src/index.html
+++ b/tinymce-angular-codox/src/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <link href="https://cdn1.stage.codox.io/lib/css/wave.client.css" rel="stylesheet">
+  <link href="https://cdn1.codox.io/lib/2.x/css/wave.client.css" rel="stylesheet">
   <script
-    src="https://smd.stage.codox.io/plugins/wave.client.js?apiKey=58e429b0-be4a-4cd8-8c8d-9a37fb0adec0&app=tinymce"
+    src="https://cdn1.codox.io/lib/2.x/api/wave.client.js"
     type="text/javascript"></script>
 </head>
 
